add map data structure

--- a/exam1/Makefile
+++ b/exam1/Makefile
@@ -4,10 +4,10 @@ CXX = g++
 CPPFLAGS = -std=c++11 -O2
 
 TARGET = a.out
-SOURCE = orienteering.cpp
+SOURCE = orienteering.cpp map.cpp
 
 $(TARGET): $(SOURCE)
-	$(CXX) $(CPPFLAGS) -o $@ $<
+	$(CXX) $(CPPFLAGS) -o $@ $^
 
 clean:
 	rm -f $(TARGET)
