--- a/exam1/Makefile
+++ b/exam1/Makefile
@@ -4,7 +4,7 @@ CXX = g++
 CPPFLAGS = -std=c++11 -O2
 
 TARGET = a.out
-SOURCE = orienteering.cpp map.cpp
+SOURCE = orienteering.cpp maze.cpp
 
 $(TARGET): $(SOURCE)
 	$(CXX) $(CPPFLAGS) -o $@ $^
